--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+
+# test audio files
+
+*.test.mp3
+*.test.mp3.import
+*.test.wav
+*.test.wav.import
