--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=473
-dock_hsplit_3=-432
+dock_hsplit_2=270
+dock_hsplit_3=-426
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://show_spectrum.tscn", "res://node_3d.tscn", "res://rig.tscn", "res://Light.tscn"]
+open_scenes=["res://show_spectrum.tscn", "res://node_3d.tscn"]
 
 [ScriptEditor]
 
 open_scripts=["res://show_spectrum.gd"]
-open_help=["AudioServer", "CanvasItem", "Mesh", "MeshInstance2D", "MeshInstance3D", "Rect2", "String"]
+open_help=["AudioServer", "SpotLight3D", "String"]
 script_split_offset=70
 list_split_offset=0
