--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,25 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 49,
+"column": 59,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 32,
-"scroll_position": 20.0,
+"row": 80,
+"scroll_position": 58.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Top.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 61,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 164,
+"row": 223,
+"scroll_position": 203.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
