--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="/Applications/Godot.app/Contents/MacOS/Godot"
+executable_path="/usr/bin/godot"
 
 [debug_options]
 
@@ -27,4 +27,9 @@ last_selected_language="GDScript"
 
 [color_picker]
 
-recent_presets=PackedColorArray(0.167058, 0.134112, 0.0201563, 1, 0.172549, 0.133333, 0.0196078, 1, 0, 0.133333, 0.0196078, 1, 0, 0, 0.0196078, 1, 0, 0, 0, 1, 0.114897, 0.114897, 0.114897, 1, 0.676879, 0.676879, 0.676879, 1, 0.697578, 0.697578, 0.697578, 1, 0.968627, 0.717647, 0.0941176, 1)
+recent_presets=PackedColorArray(0.114897, 0.114897, 0.114897, 1, 0.676879, 0.676879, 0.676879, 1, 0.697578, 0.697578, 0.697578, 1, 0.968627, 0.717647, 0.0941176, 1, 0.0295066, 0.0295066, 0.0295066, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0.466181, 0.466181, 0.466181, 1, 0.704578, 0.0017431, 0.872067, 1)
+
+[shader_setup]
+
+last_selected_mode=0
+last_selected_language="Shader"
