changed more numbers

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="/usr/bin/godot"
+executable_path="/Applications/Godot.app/Contents/MacOS/Godot"
 
 [debug_options]
 
@@ -27,7 +27,7 @@ last_selected_language="GDScript"
 
 [color_picker]
 
-recent_presets=PackedColorArray(0.114897, 0.114897, 0.114897, 1, 0.676879, 0.676879, 0.676879, 1, 0.697578, 0.697578, 0.697578, 1, 0.968627, 0.717647, 0.0941176, 1, 0.0295066, 0.0295066, 0.0295066, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0.466181, 0.466181, 0.466181, 1, 0.704578, 0.0017431, 0.872067, 1)
+recent_presets=PackedColorArray(0.114897, 0.114897, 0.114897, 1, 0.676879, 0.676879, 0.676879, 1, 0.697578, 0.697578, 0.697578, 1, 0.968627, 0.717647, 0.0941176, 1, 0.0295066, 0.0295066, 0.0295066, 1, 1, 1, 1, 1, 0.466181, 0.466181, 0.466181, 1, 0.704578, 0.0017431, 0.872067, 1, 0, 0, 0, 1)
 
 [shader_setup]
 
