Started pattern support

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=483
-dock_hsplit_3=-506
+dock_hsplit_2=438
+dock_hsplit_3=-548
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -20,7 +20,7 @@ open_scenes=["res://show_spectrum.tscn", "res://rig.tscn", "res://Light.tscn", "
 
 [ScriptEditor]
 
-open_scripts=["res://show_spectrum.gd", "res://Top.gd"]
+open_scripts=["res://pattern_controll.gd", "res://show_spectrum.gd", "res://Top.gd"]
 open_help=["AudioServer", "CanvasItem", "Color", "Mesh", "MeshInstance2D", "MeshInstance3D", "Rect2", "SpotLight3D", "String"]
 script_split_offset=70
 list_split_offset=0
