--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 83,
-"scroll_position": 74.0,
-"selection": false,
+"row": 78,
+"scroll_position": 67.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 78,
+"selection_to_column": 26,
+"selection_to_line": 86,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,11 +21,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 230,
-"scroll_position": 220.0,
+"row": 224,
+"scroll_position": 204.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://pattern_controll.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 39,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 40,
+"scroll_position": 30.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
