added more stuff

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -20,7 +20,7 @@ advanced_mode=true
 
 project_settings=Rect2(205, 29, 1060, 995)
 search_help=Rect2(480, 300, 960, 540)
-editor_settings=Rect2(380, 160, 1800, 1280)
+editor_settings=Rect2(76, 62, 1800, 653)
 create_new_node=Rect2(654, 213, 900, 700)
 
 [script_setup]
@@ -29,7 +29,7 @@ last_selected_language="GDScript"
 
 [color_picker]
 
-recent_presets=PackedColorArray(0.0295066, 0.0295066, 0.0295066, 1, 0.466181, 0.466181, 0.466181, 1, 0.704578, 0.0017431, 0.872067, 1, 1, 1, 1, 1, 0.470076, 0.470076, 0.470076, 1, 0.545088, 0.226915, 1, 1, 0.473976, 0.473976, 0.473976, 1, 0.698992, 0.00244119, 0.917802, 1, 0, 0, 0, 1)
+recent_presets=PackedColorArray(0.0295066, 0.0295066, 0.0295066, 1, 0.466181, 0.466181, 0.466181, 1, 0.704578, 0.0017431, 0.872067, 1, 0.470076, 0.470076, 0.470076, 1, 0.545088, 0.226915, 1, 1, 0.473976, 0.473976, 0.473976, 1, 0.698992, 0.00244119, 0.917802, 1, 0, 0, 0, 1, 1, 1, 1, 1)
 
 [shader_setup]
 
@@ -44,6 +44,8 @@ MultiNodeEdit:scale=true
 StandardMaterial3D:uv1_scale=true
 StandardMaterial3D:uv2_scale=true
 MeshInstance3D:scale=true
+OmniLight3D:scale=true
+SpotLight3D:scale=true
 
 [scripts_panel]
 
