--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -36,11 +36,11 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://art-net-test.gd", "res://pattern_controll.gd", "res://show_spectrum.gd", "res://Top.gd"]
-open_help=["AudioServer", "CanvasItem", "Color", "Mesh", "MeshInstance2D", "MeshInstance3D", "Rect2", "SpotLight3D", "String", "TLSOptions", "WebSocketPeer"]
+open_scripts=["res://art-net-test.gd", "res://Camera3D.gd", "res://pattern_controll.gd", "res://show_spectrum.gd", "res://Top.gd"]
+open_help=["AudioServer", "CanvasItem", "Color", "Input", "Mesh", "MeshInstance2D", "MeshInstance3D", "Rect2", "SpotLight3D", "String", "TLSOptions", "WebSocketPeer"]
 script_split_offset=207
 list_split_offset=0
-selected_script="res://pattern_controll.gd"
+selected_script="res://Camera3D.gd"
 
 [ShaderEditor]
 
