--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -45,15 +45,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 47,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 22,
-"row": 79,
-"scroll_position": 56.0,
-"selection": true,
-"selection_from_column": 24,
-"selection_from_line": 79,
-"selection_to_column": 27,
-"selection_to_line": 79,
+"h_scroll_position": 0,
+"row": 51,
+"scroll_position": 57.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Camera3D.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 57,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 115,
+"scroll_position": 79.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
