--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,7 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"Camera3D",
+"class": &"FreeLookCamera",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Camera3D.gd"
+}])
