--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=438
-dock_hsplit_3=-389
+dock_hsplit_2=537
+dock_hsplit_3=-558
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
@@ -27,20 +27,20 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://show_spectrum.tscn", "res://rig.tscn", "res://Light.tscn", "res://node_3d.tscn", "res://node_2d.tscn")
+open_scenes=PackedStringArray("res://show_spectrum.tscn", "res://rig.tscn", "res://Light.tscn", "res://node_3d.tscn")
 current_scene="res://node_3d.tscn"
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://art-net-test.gd", "res://pattern_controll.gd", "res://show_spectrum.gd", "res://Top.gd"]
-open_help=["AudioServer", "CanvasItem", "Color", "Mesh", "MeshInstance2D", "MeshInstance3D", "Rect2", "SpotLight3D", "String", "TLSOptions", "WebSocketPeer"]
-script_split_offset=207
+open_scripts=["res://pattern_controll.gd", "res://show_spectrum.gd", "res://Top.gd"]
+open_help=["AudioServer", "CanvasItem", "Color", "Mesh", "MeshInstance2D", "MeshInstance3D", "Rect2", "SpotLight3D", "String"]
+script_split_offset=70
 list_split_offset=0
-selected_script="res://pattern_controll.gd"
+selected_script="res://show_spectrum.gd"
 
 [ShaderEditor]
 
