Made school room

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=537
-dock_hsplit_3=-558
+dock_hsplit_2=438
+dock_hsplit_3=-417
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://test.mp3")
+dock_filesystem_selected_paths=PackedStringArray("res://rig.glb")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,7 +27,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://show_spectrum.tscn", "res://rig.tscn", "res://Light.tscn", "res://node_3d.tscn")
+open_scenes=PackedStringArray("res://show_spectrum.tscn", "res://Light.tscn", "res://node_2d.tscn", "res://node_3d.tscn")
 current_scene="res://node_3d.tscn"
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
@@ -36,19 +36,12 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-<<<<<<< HEAD
-open_scripts=["res://art-net-test.gd", "res://Camera3D.gd", "res://pattern_controll.gd", "res://show_spectrum.gd", "res://Top.gd"]
+<<<<<<<HEADopen_scripts=["res://art-net-test.gd", "res://Camera3D.gd", "res://pattern_controll.gd", "res://show_spectrum.gd", "res://Top.gd"]
 open_help=["AudioServer", "CanvasItem", "Color", "Input", "Mesh", "MeshInstance2D", "MeshInstance3D", "Rect2", "SpotLight3D", "String", "TLSOptions", "WebSocketPeer"]
 script_split_offset=207
 list_split_offset=0
-selected_script="res://Camera3D.gd"
-=======
-open_scripts=["res://pattern_controll.gd", "res://show_spectrum.gd", "res://Top.gd"]
-open_help=["AudioServer", "CanvasItem", "Color", "Mesh", "MeshInstance2D", "MeshInstance3D", "Rect2", "SpotLight3D", "String"]
-script_split_offset=70
-list_split_offset=0
-selected_script="res://show_spectrum.gd"
->>>>>>> main
+selected_script="res://Room Lights.gd"
+open_scripts=["res://art-net-test.gd", "res://Camera3D.gd", "res://pattern_controll.gd", "res://Room Lights.gd", "res://show_spectrum.gd", "res://Top.gd"]
 
 [ShaderEditor]
 
