--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=438
-dock_hsplit_3=-417
+dock_hsplit_3=-308
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
@@ -40,7 +40,7 @@ selected_bottom_panel_item=0
 open_help=["AudioServer", "CanvasItem", "Color", "Input", "Mesh", "MeshInstance2D", "MeshInstance3D", "Rect2", "SpotLight3D", "String", "TLSOptions", "WebSocketPeer"]
 script_split_offset=207
 list_split_offset=0
-selected_script="res://Room Lights.gd"
+selected_script="res://pattern_controll.gd"
 open_scripts=["res://art-net-test.gd", "res://Camera3D.gd", "res://pattern_controll.gd", "res://Room Lights.gd", "res://show_spectrum.gd", "res://Top.gd"]
 
 [ShaderEditor]
